--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,31 @@
     <packaging>jar</packaging>
 
     <name>InventoryX</name>
-
     <description>Inventory Library For Paper/Spigot</description>
+    <url>https://github.com/TheWebcode/InventoryX</url>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:git://github.com/TheWebcode/InventoryX.git</connection>
+        <developerConnection>scm:git:ssh://github.com:TheWebcode/InventoryX.git</developerConnection>
+        <url>https://github.com/TheWebcode/InventoryX</url>
+    </scm>
+
+    <developers>
+        <developer>
+            <name>Lex Seifert</name>
+            <email>webcode_mail@yahoo.com</email>
+            <organization>io.github.thewebcode</organization>
+            <organizationUrl>https://github.com/TheWebcode/</organizationUrl>
+        </developer>
+    </developers>
+
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
